task4-jenkins-cicd/main.tf
resource "aws_vpc" "main" {
cidr_block = var.vpc_cidr
  tags = {
Name = "jenkins-vpc"
  }
}

resource "aws_subnet" "public_subnet" {
vpc_id = aws_vpc.main.id
cidr_block = var.public_cidr
  availability_zone = "${var.region}a"
    map_public_ip_on_launch = true
  tags = {
    Name = "public-subnet"
  }
}
resource "aws_subnet" "private_subnet" {
  vpc_id = aws_vpc.main.id
  cidr_block = var.private_cidr
    availability_zone = "${var.region}b"
  tags = {
Name = "private-subnet"
  }
}

resource "aws_internet_gateway" "gw" {
vpc_id = aws_vpc.main.id
}
resource "aws_eip" "nat_eip" {
  domain = "vpc"
}

resource "aws_nat_gateway" "nat_gw" {
allocation_id = aws_eip.nat_eip.id
  subnet_id = aws_subnet.public_subnet.id
}

resource "aws_route_table" "public" {
vpc_id = aws_vpc.main.id
route {
    cidr_block = "0.0.0.0/0"
      gateway_id = aws_internet_gateway.gw.id
}
}
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id
  route {
cidr_block = "0.0.0.0/0"
nat_gateway_id = aws_nat_gateway.nat_gw.id
  }
}

resource "aws_route_table_association" "public" {
subnet_id = aws_subnet.public_subnet.id
route_table_id = aws_route_table.public.id
}
resource "aws_route_table_association" "private" {
  subnet_id = aws_subnet.private_subnet.id
  route_table_id = aws_route_table.private.id
}
